--- a/src/exercise/2-simple-react/02.html
+++ b/src/exercise/2-simple-react/02.html
@@ -18,20 +18,33 @@
   </body>
 
   <script>
-    // 🦁 Crée un button avec comme id "start" et comme text à l'intérieur "Start !"
-    const button = document.createElement('button');
-    button.id = 'start';
-    button.innerText = 'Start !';
-    // 🦁 Ajoute une événement "onClick" à notre button qui affiche une alert.
-    button.addEventListener('click', () => {
-      alert('Tu as cliqué sur Start !');
+    const fruits = ['pomme', 'poire', 'fraise', 'cerise'];
+
+    const fruitsItems = fruits.map((fruit) => {
+      return React.createElement('li', null, fruit);
     });
-    // 🦁 Crée une div : "elements" avec à l'intérieur le bouton.
-    const elements = document.createElement('div');
-    elements.appendChild(button);
+    const list = React.createElement('ul', null, fruitsItems);
+    const buttonStart = React.createElement(
+      'button',
+      {
+        id: 'start',
+        onClick: () => {
+          alert('Tu as cliqué sur Start !');
+        },
+      },
+      'Start'
+    );
+    const buttonStop = React.createElement('button', null, 'Stop');
+    const element = React.createElement(
+      'div',
+      null,
+      React.createElement('h1', null, 'Lance la partie !'),
+      buttonStop,
+      list
+    );
     const container = document.querySelector('#root');
     const root = ReactDOM.createRoot(container); // 🦁 Remplace `undefined` by `ReactDOM.createRoot(container);`
     // 🦁 Utilise `root.render` pour afficher la div "elements"
-    root.render(elements);
+    root.render(element);
   </script>
 </html>
