--- a/src/exercise/3-jsx/03.html
+++ b/src/exercise/3-jsx/03.html
@@ -21,41 +21,53 @@
   <!-- 💡 permet de faire comprendre a Babel qu'il doit compiler ce fichier -->
 
   <script type="text/babel">
-    // 🦁 Remplace tout ceci par du JSX !
     // 💡 <button id=...
-    const startButton = (
-      <button
-        id="start"
-        onClick={() => {
-          alert('Le bouton start à été cliqué !');
-        }}
-      >
-        {' '}
-        Start{' '}
-      </button>
-    );
+    // const startButton = (
+    //   <button
+    //     id="start"
+    //     onClick={() => {
+    //       alert('Le bouton start à été cliqué !');
+    //     }}
+    //   >
+    //     {' '}
+    //     Start{' '}
+    //   </button>
+    // );
 
-    const Message = (props) => {
-      return <p>{props.children + ' ' + props.author}</p>;
+    //Deuxième façon de faire
+
+    // const stratButton = (
+    //   <button
+    //     id="start"
+    //     onClick={() => {
+    //       alert('Le bouton start à été cliqué !');
+    //     }}
+    //   >
+    //     Start
+    //   </button>
+    // );
+    const Message = ({ author = 'Default', children = 'Default message' }) => {
+      return (
+        <p>
+          <b>{author}</b> : {children}
+        </p>
+      );
     };
-    const elements = /*#__PURE__*/ React.createElement(
-      'div',
-      null,
-      startButton,
-      /*#__PURE__*/ React.createElement(Message, null, 'Mon message ici'),
-      /*#__PURE__*/ React.createElement(
-        Message,
-        {
-          author: 'Nicolas',
-        },
-        'Hello'
-      ),
-      /*#__PURE__*/ React.createElement('h2', null, Math.random()),
-      /*#__PURE__*/ React.createElement('p', null, 112 + 4),
-      /*#__PURE__*/ React.createElement('span', null, new Date().toDateString())
-    );
 
+    const button = <button id="start">Start</button>;
+
+    const element = (
+      <div>
+        {button}
+        <Message author="Nicolas">Hello ! </Message>
+        <Message author="Michel">Coucou ! </Message>
+        <Message></Message>
+        <h2>{Math.random()}</h2>
+        <p>112 + 4 = {112 + 4}</p>
+        <span>{new Date().toDateString()}</span>
+      </div>
+    );
     const root = ReactDOM.createRoot(document.querySelector('#root'));
-    root.render(elements);
+    root.render(element);
   </script>
 </html>
